<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--    Application-->
    <string name="app_name">CriminalIntent</string>

    <!--    CrimeListFragment-->
    <string name="fragment_crime_list_text_empty_text">List is empty</string>
    <string name="fragment_crime_list_toast_sent_to_police">%s sent to police!</string>

    <string name="item_crime_image_solved_description_solved">Solved</string>
    <string name="item_crime_image_solved_description_not_solved">Not Solved</string>
    <string name="item_crime_police_description">Requires Police</string>
    <string name="item_crime_police_button_police_text">Police</string>
    <string name="item_crime_police_button_police_description">Send to police</string>

    <!--    CrimeFragment-->
    <string name="fragment_crime_image_photo_description_empty">Crime scene photo (not set)</string>
    <string name="fragment_crime_image_photo_description_set">Crime scene photo (set)</string>
    <string name="fragment_crime_image_photo_announce_added">Photo added</string>
    <string name="fragment_crime_image_photo_announce_changed">Photo changed</string>
    <string name="fragment_crime_imagebutton_camera_description">Take photo of a crime scene</string>
    <string name="fragment_crime_text_title_text">Title</string>
    <string name="fragment_crime_edittext_title_hint">Enter a title for the crime.</string>
    <string name="fragment_crime_text_details_text">Details</string>
    <string name="fragment_crime_text_label_button_date_text">Date of crime</string>
    <string name="fragment_crime_checkbox_solved_text">Solved</string>
    <string name="fragment_crime_checkbox_requires_police_text">Requires Police</string>
    <string name="fragment_crime_text_label_button_choose_suspect_text">Suspect</string>
    <string name="fragment_crime_button_choose_suspect_text">Choose suspect</string>
    <string name="fragment_crime_button_send_report_text">Send Crime Report</string>
    <string name="fragment_crime_button_call_suspect_text">Call Suspect</string>
    <string name="fragment_crime_toast_no_phone">There is no phone in the selected contact.</string>
    <string name="fragment_crime_toast_permission_required">Read Contacts permission required.</string>

    <!--    CrimePhotoFragment-->
    <string name="fragment_photo_crime_image_photo_description">Crime scene photo. Full screen. Back to close.</string>

    <!--    Crime Report-->
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="crime_report_text">The crime "%1$s"\nwas discovered on %2$s. %3$s, and %4$s\n%5$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_police_required">Police required.</string>
    <string name="crime_report_police_not_required">Police not required.</string>
    <string name="crime_report_send_via">Send crime report via</string>

    <!--    MenuCrimeFragmentList-->
    <string name="menu_fragment_crime_list_item_new_crime_text">New Crime</string>
</resources>
